refactor: Java モダン構文で設備グラフィックガントとタブを整理
record・テキストブロック・Stream.toList・AtomicBoolean で可読性と不変性を向上。